Fix search box zoom on iOS

--- a/src/assets/stylesheets/_search.scss
+++ b/src/assets/stylesheets/_search.scss
@@ -11,6 +11,7 @@
 
 .ais-search-box--input {
   font-family: $sans-serif-font;
+  font-size: 1rem;
 }
 
 .ais-Highlight {
